@@ -111,7 +111,6 @@ public class ClusterStateMockUtil {
   public static ZkStateReader buildClusterState(
       String clusterDescription, int replicationFactor, String... liveNodes) {
     Map<String, Slice> slices = null;
-    Map<String, Replica> replicas = null;
     Map<String, Object> collectionProps = new HashMap<>();
     collectionProps.put(ZkStateReader.REPLICATION_FACTOR, Integer.toString(replicationFactor));
     Map<String, DocCollection> collectionStates = new HashMap<>();
@@ -138,9 +137,9 @@ public class ClusterStateMockUtil {
           collectionStates.put(docCollection.getName(), docCollection);
           break;
         case "s":
-          replicas = new HashMap<>();
           if (collName == null) collName = "collection" + (collectionStates.size() + 1);
-          slice = new Slice(sliceName = "slice" + (slices.size() + 1), replicas, null, collName);
+          slice =
+              new Slice(sliceName = "slice" + (slices.size() + 1), new HashMap<>(), null, collName);
           slices.put(slice.getName(), slice);
 
           // hack alert: the DocCollection constructor copies over active slices to its active slice
@@ -168,7 +167,7 @@ public class ClusterStateMockUtil {
           // O(n^2) alert! but this is for mocks and testing so shouldn't be used for very large
           // cluster states
           boolean leaderFound = false;
-          for (Map.Entry<String, Replica> entry : replicas.entrySet()) {
+          for (Map.Entry<String, Replica> entry : slice.getReplicasMap().entrySet()) {
             Replica value = entry.getValue();
             if ("true".equals(value.get(ReplicaStateProps.LEADER))) {
               leaderFound = true;
@@ -178,15 +177,13 @@ public class ClusterStateMockUtil {
           if (!leaderFound && !m.group(1).equals("p")) {
             replicaPropMap.put(ReplicaStateProps.LEADER, "true");
           }
-          replica = new Replica(replicaName, replicaPropMap, collName, sliceName);
-          replicas.put(replica.getName(), replica);
 
           // hack alert: re-create slice with existing data and new replicas map so that it updates
           // its internal leader attribute
-          slice = new Slice(slice.getName(), replicas, null, collName);
+          slice = slice.copyWith(new Replica(replicaName, replicaPropMap, collName, sliceName));
           slices.put(slice.getName(), slice);
-          // we don't need to update doc collection again because we aren't adding a new slice or
-          // changing its state
+          docCollection = docCollection.copyWithSlices(slices);
+          collectionStates.put(docCollection.getName(), docCollection);
           break;
         default:
           break;
