@@ -9,6 +9,9 @@ Bug Fixes
 ---------------------
 * SOLR-17261: Remove unintended timeout of 60 seconds for core loading. (Houston Putman)
 
+* SOLR-17049: Actually mark all replicas down at startup and truly wait for them.
+  This includes replicas that might not exist anymore locally. (Houston Putman, Vincent Primault)
+
 Dependency Upgrades
 ---------------------
 (No changes)
